--- a/static/style.css
+++ b/static/style.css
@@ -66,3 +66,24 @@
         0% { transform: rotate(0deg); }
         100% { transform: rotate(360deg); }
       }
+
+      .settings{
+         width: 40%
+      }
+
+      .settingLink{
+         float:right;
+      }
+
+      .back-button {
+         background-color: transparent;
+         color: white;
+         padding: 12px 20px;
+         border: none;
+         border-radius: 4px;
+         cursor: pointer;
+     }
+
+      .back-button:hover {
+        background-color: #3e8e41;
+     }
